--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 </div>
                 
                 <img src="images/Group 38.png" alt="sort1" class="sort1">
+                <img src="images/Group 90.png" alt="sort2" class="sort2">
 
         </div>
         
